# alleleTools

./: .gitignore  .readthedocs.yaml  allele2vcf.py  allele_resolution.sh  consensus.py  environment.yml  gene_table.tsv  main.py  pyproject.toml  readme.md  vcf2allele.py  vcf2pyhla.py
docs/: Makefile
docs/source/: algorithms.rst  conf.py  file_types.rst  index.rst
docs/source/modules/: format.rst  plot.rst  test.rst
resources/: gene_table.tsv  gene_table_kir.tsv  hla_diversity.txt  icon.ascii.txt  kir_example.vcf  parser_config.json  template.vcf
src/alleleTools/: __init__.py  allele.py  alleleTools.py  argtypes.py
src/alleleTools/convert/: __init__.py  allele2vcf.py  alleleTable.py  kir_mapper.py  test_ukb2allele.py  ukb2allele.py  vcf.py  vcf2allele.py
src/alleleTools/convert/tests/: test_ukb2allele.py  test_vcf2allele.py
src/alleleTools/format/: __init__.py  allele2vcf.py  alleleTable.py  allele_resolution.py  from_ikmb_hla.py  g_group.py  gene_report.py  hla_group.py  immuannot_report.py  kir_mapper.py  ukb2allele.py  vcf.py  vcf2allele.py
src/alleleTools/format/tests/: test_consensus.py  test_gene_report.py  test_hla_group.py  test_vcf2allele.py
src/alleleTools/genotype/: __init__.py  consensus.py  ikmb_report.py  plot_ikmb_coverage.py  test_consensus.py  test_ikmb_report.py
src/alleleTools/interpret/: __init__.py  graph_pathogens.py  graph_phewas.py
src/alleleTools/interpret/iedb/: taxon_query.py
src/alleleTools/plot/: __init__.py  graph_pathogens.py  graph_phewas.py  plot_ikmb_coverage.py
src/alleleTools/plot/iedb/: epitope_query.py  taxon_query.py
src/alleleTools/refactor/: __init__.py  allele_resolution.py  allele_resolution_wrapper.py  test_allele.py
src/alleleTools/tests/: test_allele.py  test_argtypes.py
src/alleleTools/utils/: assets.py
